add compressed images

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1">
+     <meta name="author" content="Anselme Massiot" />
+     <meta name="keywords" content="portfolio, Anselme Massiot, anselme massiot, 2023" />
+     <meta name="description" content="Portfolio de Anselme Massiot 2023 présentation des projets réalisé." />
      
      <title>Anselme Massiot</title>
 
