feat : update AnimationManager create a new file animationsData to save the animations and change the startContactContainerAnimation method

--- a/index.html
+++ b/index.html
@@ -16,10 +16,9 @@
      <link rel="manifest" href="assets/favicon_package/site.webmanifest">
      <link rel="mask-icon" href="assets/favicon_package/safari-pinned-tab.svg" color="#5bbad5">
 
-     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.min.js"></script>
-     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.1/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.1/CSSRulePlugin.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.1/ScrollTrigger.min.js"></script>
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/CSSRulePlugin.min.js"></script>
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
 </head>
 <body>
 
@@ -39,7 +38,7 @@
                          <ul class="home-container__description-skils__list show-border">
                               <li class="home-container__description-skils__list-elements fade-in">Développement</li>
                               <li class="home-container__description-skils__list-elements fade-in">Design</li>
-                              <li class="home-container__description-skils__list-elements fade-in">Front</li>
+                              <li class="home-container__description-skils__list-elements fade-in">Front-End</li>
                          </ul>
                     </article>
           
@@ -57,7 +56,7 @@
           
                          <article class="home-container__description-presentation__content">
                               <h3 class="moove-right-2">Qui suis-je ?</h3>
-                              <p class="moove-right-3">Je suis Anselme, développeur web basé à Rennes. Passionné par la programmation et le design d'interface web, j'ai entrepris une reconversion après mes études dans le tertiaire. En autodidacte, j'ai exploré divers langages de programmation et concepts web clés. J'ai ensuite suivi une formation intensive de 6 mois pour renforcer mes compétences. À la recherche d'une alternance, je suis enthousiaste à l'idée d'apporter mes connaissances et ma créativité à des projets web captivants.</p>
+                              <p class="moove-right-2">Je suis Anselme, développeur web basé à Rennes. Passionné par la programmation et le design d'interface web, j'ai entrepris une reconversion après mes études dans le tertiaire. En autodidacte, j'ai exploré divers langages de programmation et concepts web clés. J'ai ensuite suivi une formation intensive de 6 mois pour renforcer mes compétences. À la recherche d'une alternance, je suis enthousiaste à l'idée d'apporter mes connaissances et ma créativité à des projets web captivants.</p>
                          </article>
                     </article>
                </section>
@@ -76,7 +75,7 @@
           <section class="contact-container">
                <article class="contact-container__content">
                     <section class="contact-container__content__email">
-                         <h2>Me contacter :</h2>
+                         <h2 class="contact-container__content__email-title">Me contacter :</h2>
                          <a href="mailto:massiot.anselme@gmail.com" class="email">massiot.anselme@gmail.com</a>
                     </section>
                     <section class="contact-container__content__links">
@@ -95,8 +94,8 @@
                </article>
 
                <section class="contact-container__hero">
-                    <div class="contact-container__hero-reveal">
-                         <img class="reveal-image" src="assets/media/anselme-massiot-pics.png" alt="Anselme Massiot">
+                    <div class="contact-container__hero__reveal">
+                         <img class="contact-container__hero__reveal-image" src="assets/media/anselme-massiot-pics.png" alt="Anselme Massiot">
                     </div>
                </section>
           </section>
